Big changes bro

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZNÁŠ NERA WEB APP</title>
+    <title>ŠIFROVAČKA WEB APP</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     
 </head>
 <body>
-    <h2>ZNÁŠ NERA 6?</h2>
+    <h2>JBC CODE 2025</h2>
     <div id="codeinput">
         <input id="teamid" type="text" placeholder="Team ID.">
         <button id="loginbutton" class="mbutton">OK</button>
