--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ŠIFROVAČKA WEB APP</title>
+    <title>GAME APP</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
     
 </head>
