--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
         <button id="loginbutton" class="mbutton">OK</button>
     </div>
     <div id ="textinfo" class={{msgcolor}}>Info: {{msg}}</div>
+    <p id="devinfo"> Do aplikace přidám češtinu a ještě měním posílání nápověd, aby se nemuselo mačkat tlačítko REFRESH HINT (ještě dnes). Podněty k aplikaci pište na +420732781691 SMSkou.</p>
     <script src="{{ url_for('static', filename='scripts/script_index.js') }}"></script>
 </body>
 </html>
