--- a/templates/admin.html
+++ b/templates/admin.html
@@ -11,10 +11,10 @@
     <h2>JBC CODE 2025</h2>
     <div id="codeinput">
         <input id="teamid" type="text" placeholder="Team ID.">
-        <button id="resetbutton" class="mbutton">RESET GAME</button>
+        <button id="resetbutton" class="mbutton">VYMAZAT POSTUP TÝMU</button>
     </div>
     <div>
-    <button id="statsbutton" class="mbutton">SHOW STATS</button>
+    <button id="statsbutton" class="mbutton">STATISTIKY</button>
     </div>
     <div id = "textinfo" class={{msgcolor}}>{{msg | safe}}</div>
     <script src="{{ url_for('static', filename='scripts/script_admin.js') }}"></script>
