--- a/templates/main.html
+++ b/templates/main.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <h2>JBC CODE 2025</h2>
-    <p>Team name: {{tn}}</p>
+    <p>Název týmu: {{tn}}</p>
     <div id="codeinput">
         <input id="levelcode" type="text" placeholder="Level code.">    
         <button class="mbutton" id="confirm">OK</button>
     </div>
     <div id ="textinfo" class={{msgcolor}}>Info: {{msg}}</div>
     <div>
-        <button class="mbutton" id="refreshbut">REFRESH HINT</button>
+        <button class="mbutton" id="refreshbut">OBNOVENÍ NÁPOVĚDY</button>
     </div>
     <script src="{{ url_for('static', filename='scripts/script_main.js') }}"></script>
 </body>
