jeste cestina no

--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,7 @@
     <h2>JBC CODE 2025</h2>
     <p>Název týmu: {{tn}}</p>
     <div id="codeinput">
-        <input id="levelcode" type="text" placeholder="Level code.">    
+        <input id="levelcode" type="text" placeholder="Kód stanoviště.">    
         <button class="mbutton" id="confirm">OK</button>
     </div>
     <div id ="textinfo" class={{msgcolor}}>Info: {{msg}}</div>
