--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>JBC CODE 2025</h2>
     <div id="codeinput">
-        <input id="teamid" type="text" placeholder="Team ID.">
+        <input id="teamid" type="text" placeholder="Kód týmu.">
         <button id="loginbutton" class="mbutton">OK</button>
     </div>
     <div id ="textinfo" class={{msgcolor}}>Info: {{msg}}</div>
