final bullshit js

--- a/templates/main.html
+++ b/templates/main.html
@@ -18,6 +18,8 @@
     <div>
         <button class="mbutton" id="refreshbut">OBNOVENÍ NÁPOVĚDY</button>
     </div>
+    <p id="devinfo">Aplikace si každých 30 sekund sama obnoví nápovědu. Kdyžtak můžete v daný čas kliknout na tlačítko Obnovení nápovědy.
+    </p>
     <script src="{{ url_for('static', filename='scripts/script_main.js') }}"></script>
 </body>
 </html>
